--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 Hello there, awesome person!
 <html>
   
+  <head>
+    <title> HI this is Aileen </title>
+    <head>
+  
   <body>
     
   </body>
