--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ Hello there, awesome person!
   <body>
     <h1> the first title~ </h1>
     
+    <img
+         src = "https://avatars1.githubusercontent.com/u/71139689?v=4">
+    
   </body>
   
 </html>
