--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Hello there, awesome person!
     <li>Is an</li>
     <li>Unordered list</li>
 </ul>
-    
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
     
     <a href="https://www.google.com/search?q=google&rlz=1C5CHFA_enCA883CA883&oq=go&aqs=chrome.1.69i57j0l4j46j69i60l2.2816j0j7&sourceid=chrome&ie=UTF-8"> </a>
     <a href="https://www.netflix.com/ca/">
