--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@ Hello there, awesome person!
 <html>
   
   <head>
+   
     <title> HI this is Aileen </title>
+    <link rel="stylesheet" href="style.css">
     </head>
   
   <body>
